# src/routes/usersRouter.js
@@ -12,6 +12,7 @@ const {
   registrationController,
   logInController,
   logOutController,
+  currentUserController
 } = require("../controllers/usersController");
 
 router.post(
@@ -21,5 +22,6 @@ router.post(
 );
 router.post("/login", userLoginValidation, asyncWrapper(logInController));
 router.post("/logout", authMiddleware, asyncWrapper(logOutController));
+router.get("/current", authMiddleware, asyncWrapper(currentUserController));
 
 module.exports = router;
